# OpenDev-Studio

./: README.md
backend/: .gitignore  MANIFEST.in  publish.bat  pyproject.toml
backend/opendev_studio/: .gitignore  main.py
backend/opendev_studio/components/: __init__.py  agent_factory.py  ai_models.py  tools.py
backend/opendev_studio/components/agents/: __init__.py  planner_agent.py
backend/opendev_studio/graph/: __init__.py  engineering_graph.py
backend/opendev_studio/graph/subgraphs/: __init__.py  agent_subgraph.py  ask_subgraph.py  edit_subgraph.py
backend/opendev_studio/static/: index.html
backend/opendev_studio/static/assets/: index-BCz4bU07.js  index-D7kZrX4H.css
frontend/: .gitignore  index.html  package-lock.json  package.json
frontend/src/: App.jsx  main.jsx
frontend/src/components/: index.js
frontend/src/components/editor/: CodeEditor.jsx  SyntaxHighlighter.jsx  index.js
frontend/src/components/explorer/: FileTreeItem.jsx  index.js
frontend/src/components/layout/: CollapsedSidebar.jsx  Navbar.jsx  index.js
frontend/src/components/markdown/: MarkdownRenderer.jsx  TableBlock.jsx  TextWithTableRenderer.jsx  index.js
frontend/src/components/panels/: ChatPanel.jsx  EditorPanel.jsx  ExplorerPanel.jsx  SettingsSidebar.jsx  index.js
frontend/src/components/ui/: ChatCodeBlock.jsx  CustomSelect.jsx  index.js
frontend/src/constants/: index.js  messages.js  options.js  themes.js
frontend/src/hooks/: index.js  useDebounce.js
frontend/src/utils/: fileHelpers.js  icons.jsx  index.js
